--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -4,6 +4,10 @@
     <acme-navbar creation-date="main.creationDate"></acme-navbar>
   </div>
 
+  <div ng-if="main.mvarc != null">
+    My MVARC data has loaded: {{main.mvarc}}
+  </div>
+
   <div class="jumbotron text-center">
     <h1>Mt. Vernon Amateur Radio Club Volunteer Examiners</h1>
       <p class="lead">
