Initial update: version 1.51

--- a/src/app/main/about.html
+++ b/src/app/main/about.html
@@ -22,10 +22,10 @@
       <div align="left">Bring to the test:
          <ul>
            <li>Picture ID issued by a Government agency
-           <li>FCC FRN number --OR-- your Social Security Number. We can use your SSN only if the FCC has NEVER issued an FRN to you. <i>If you are currently licensed</i> you will find your FRN on your license.
+           <li>FCC Registration Number (FRN) --OR-- your Social Security Number. We can use your SSN only if the FCC has NEVER issued an FRN to you. <i>If you are currently licensed</i> you will find your FRN on your license.
            <li>If you do not have an FRN, we STRONGLY RECOMMEND that you obtain an FRN from the FCC at <a href="https://apps.fcc.gov/coresWeb/publicHome.do">https://apps.fcc.gov/coresWeb/publicHome.do</a>
            <li>Pens/Pencils. We do ask your to fill your forms with blue or black ink.
-           <lu>You may bring your own calculator. If you plan on using your own calculator, be prepared to demonstrate that all memories are empty.
+           <li>You may bring your own calculator. If you plan on using your own calculator, be prepared to demonstrate that all memories are empty.
         </ul>
       </div>
       <div align="left">Prepare for your test:
