--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -6,7 +6,7 @@
       </a>
     </div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
+    <div class="navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav">
         <li class="active"><a ng-href="#/">Home</a></li>
         <li><a ng-href="#about">About</a></li>
@@ -14,7 +14,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right acme-navbar-text">
-        <li>.</li>
+        <li></li>
       </ul>
     </div>
   </div>
