Update: version 1.53. Clean navbar display

--- a/src/app/main/contact.html
+++ b/src/app/main/contact.html
@@ -8,7 +8,7 @@
     <h1>Mt. Vernon Amateur Radio Club Volunteer Examiners</h1>
     <div align="left" >
       <p class="lead">
-        We administer amateur radio examinations monthly near downtown Alexandria, Virginia.
+        <em>We administer amateur radio examinations monthly near downtown Alexandria, Virginia.</em>
       </p>
       </div>
       <div align="left">Contact Us:
