--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -8,7 +8,7 @@
     <h1>Mt. Vernon Amateur Radio Club Volunteer Examiners</h1>
     <div align="left" >
       <p class="lead">
-        We administer amateur radio examinations monthly near downtown Alexandria, Virginia.
+        <em>We administer amateur radio examinations monthly near downtown Alexandria, Virginia.</em>
       </p>
       </div>
     <br/>
@@ -17,7 +17,7 @@
       Updates:
     </p>
     </div>
-      <div style="width: 470px;height: 450px; left: 50%;">
+      <div style="width: 400px;height: 450px; left: 50%;">
         <a class="twitter-timeline" href="https://twitter.com/MtVernonVE" data-widget-id="701942340118822913">Tweets by @MtVernonVE</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>      
       </div>
