--- a/src/app/main/about.html
+++ b/src/app/main/about.html
@@ -8,14 +8,14 @@
     <h1>Mt. Vernon Amateur Radio Club Volunteer Examiners</h1>
     <div align="left" >
       <p class="lead">
-        We administer amateur radio examinations monthly near downtown Alexandria, Virginia.
+        <em>We administer amateur radio examinations monthly near downtown Alexandria, Virginia.</em>
       </p>
       </div>
       <div align="left">About our exams:
          <br/>
          <ul>
            <li>All of our tests are "walk-in" - we don't do pre-registration. 
-           <li>We provide all necessary paperwork.  Do not bring your own FCC Form 605-you must use the form we provide - has pre-printed info.
+           <li>We provide all necessary paperwork.  Do not bring your own FCC Form 605 - you must use the form we provide - The forms we ask your to fill have pre-printed info.
            <li>All our exams are FREE.
          </ul>
       </div>
@@ -23,7 +23,7 @@
          <ul>
            <li>Picture ID issued by a Government agency
            <li>FCC Registration Number (FRN) --OR-- your Social Security Number. We can use your SSN only if the FCC has NEVER issued an FRN to you. <i>If you are currently licensed</i> you will find your FRN on your license.
-           <li>If you do not have an FRN, we STRONGLY RECOMMEND that you obtain an FRN from the FCC at <a href="https://apps.fcc.gov/coresWeb/publicHome.do">https://apps.fcc.gov/coresWeb/publicHome.do</a>
+           <li>If you do not have an FRN, we <em>STRONGLY RECOMMEND</em> that you obtain an FRN from the FCC at <a href="https://apps.fcc.gov/coresWeb/publicHome.do">https://apps.fcc.gov/coresWeb/publicHome.do</a>
            <li>Pens/Pencils. We do ask your to fill your forms with blue or black ink.
            <li>You may bring your own calculator. If you plan on using your own calculator, be prepared to demonstrate that all memories are empty.
         </ul>
