Update: version 1.54 Revised test throughout

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -9,7 +9,7 @@
     <div class="navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav">
         <li class="active"><a ng-href="#/">Home</a></li>
-        <li><a ng-href="#about">About</a></li>
+        <li><a ng-href="#dates">Dates and Locations</a></li>
         <li><a ng-href="#contact">Contact</a></li>
       </ul>
 
