--- a/src/app/main/contact.html
+++ b/src/app/main/contact.html
@@ -14,24 +14,12 @@
       <div align="left">Contact Us:
          <br/>
          <ul>
-           <li>John Forrest, WZ4A, is our team lead. You can contact him at wz4a -at- arrl.net or 703-971-3905
-           <li>We post our test information at the <a href="#/">home</a> link on this site. 
+           <li>John Forrest, WZ4A, is our team lead. You can contact him at <a href="mailto:teamlead@mvarc.info?subject=Web%20Referral">teamlead@mvarc.info</a> or 703-971-3905
+           <li>We post our test information at the <a href="#dates">Dates and Locations</a> link on this site. 
            <li>We post last minute updates via Twitter at <a href="https://twitter.com/MtVernonVE">https://twitter.com/MtVernonVE</a>. Check with us especially when the weather turns bad.
          </ul>
       </div>
-      <div align="left">Testing locations:
-         <ul>
-           <li>Our monthly test is at 9:30am on the second Saturday of each month.
-           <li>We usually test at the First Christian Church, 2723 King St., Alexandria, VA.  The church is about 150 yards West of the intersection of Janneys Lane and King St. in the City of Alexandria.  Park in the rear of the church and enter the glass door at the intersection of the main church and the attached school building.
-           <li>Usually means usually. Check our test information at the <a href="#/">home</a> link for up-to-date information
-           <li>We occasionally test at other events in the area.
-        </ul>
-      </div>
-    <br/>
-
   </div>
-
-
 </div>
 
 
