--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -11,30 +11,55 @@
         <em>We administer amateur radio examinations monthly near downtown Alexandria, Virginia.</em>
       </p>
       </div>
+      <div align="left">About our exams:
+         <br/>
+         <ul>
+           <li>All of our tests are "walk-in" - we don't do pre-registration. 
+           <li>We provide all necessary paperwork.  Do not bring your own FCC Form 605 - you must use the form we provide - the forms we provide have pre-printed info.
+           <li>All our exams are FREE.
+         </ul>
+      </div>
+      <div align="left">Testing locations:
+         <ul>
+           <li>We usually test at the First Christian Church, 2723 King St., Alexandria, VA.  The church is about 150 yards West of the intersection of Janneys Lane and King St. in the City of Alexandria. Park in the rear of the church and enter the glass door at the intersection of the main church and the attached school building.
+           <li>Usually means usually. Check our test information at the <a href="#dates">date</a> link or on our Twitter feed for up-to-date information
+           <li>We occasionally test at other events in the area. Check here or on Twitter for details
+        </ul>
+      </div>
+      <div align="left">Bring to the test:
+         <ul>
+           <li>Picture ID issued by a Government agency
+           <li>FCC Registration Number (FRN) --OR-- your Social Security Number. We can use your SSN only if the FCC has NEVER issued an FRN to you. <i>If you are currently licensed</i> you will find your FRN on your license.
+           <li>If you do not have an FRN, we <em>STRONGLY RECOMMEND</em> that you obtain an FRN from the FCC at <a href="https://apps.fcc.gov/coresWeb/publicHome.do">https://apps.fcc.gov/coresWeb/publicHome.do</a>
+           <li>Pens/Pencils. We do ask your to fill your forms with blue or black ink.
+           <li>You may bring your own calculator. If you plan on using your own calculator, be prepared to demonstrate that all memories are empty.
+        </ul>
+      </div>
+      <div align="left">Prepare for your test:
+         <ul>
+           <li>The testing pool is published. See <a href="http://www.arrl.org/question-pools">http://www.arrl.org/question-pools</a>
+           <li>A number of internet sites have online practice tests. Try searching for "amateur radio exam practice" in your favorite search engine
+           <li>Good luck
+        </ul>
+      </div>
+      <div align="left">When do we test:
+         <ul>
+           <li>Our monthly test is at 9:30am on the second Saturday of each month.
+           <li>Check our <a href="#dates">published testing dates, times, and locations</a> on this site.
+           <li>Follow us on <a href="https://www.twitter.com/MtVernonVE">Twitter</a> for dates, times, locations, and last minute changes.
+        </ul>
+      </div>
     <br/>
-    <div align="left" >
-    <p class="lead">
-      Updates:
-    </p>
-    </div>
+      <div align="left" >
+        <p class="lead">
+          Updates:
+        </p>
+      </div>
       <div style="width: 400px;height: 450px; left: 50%;">
         <a class="twitter-timeline" href="https://twitter.com/MtVernonVE" data-widget-id="701942340118822913">Tweets by @MtVernonVE</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>      
-      </div>
-    </div>
-  <div class="row">
-    <div class="col-sm-6 col-md-4" ng-repeat="awesomeThing in main.awesomeThings | orderBy:'rank'">
-      <div class="thumbnail">
-        <img class="pull-right" ng-src="assets/images/{{ awesomeThing.logo }}" alt="{{ awesomeThing.title }}">
-        <div class="caption">
-          <h3>{{ awesomeThing.title }}</h3>
-          <p>{{ awesomeThing.description }}</p>
-          <p><a ng-href="{{awesomeThing.url}}">{{ awesomeThing.url_label }}</a></p>
-        </div>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </div>
     </div>
   </div>
-
-
 </div>
 
