--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -28,9 +28,12 @@
       </div>
       <div align="left">Bring to the test:
          <ul>
-           <li>Your current amateur radio license and a copy. We will retain the copy as part of your application
+           <li>Current amateur radio license and a copy. We will retain the copy as part of your application
            <li>Picture ID issued by a Government agency
-           <li>FCC Registration Number (FRN) --OR-- your Social Security Number. We can use your SSN only if the FCC has NEVER issued an FRN to you. <i>If you are currently licensed</i> you will find your FRN on your license.
+           <li>FCC Registration Number (FRN). 
+             <ul><li><i>If you are currently licensed</i> you will find your FRN on your license. 
+                 <li>If you do not have an FRN, you can obtain it at <a href="https://apps.fcc.gov/coresWeb/publicHome.do" target="_blank">https://apps.fcc.gov/coresWeb/publicHome.do</a>
+             </ul>
            <li>If you do not have an FRN, we <em>STRONGLY RECOMMEND</em> that you obtain an FRN from the FCC at <a href="https://apps.fcc.gov/coresWeb/publicHome.do">https://apps.fcc.gov/coresWeb/publicHome.do</a>
            <li>Pens/Pencils. We do ask you to fill your forms with blue or black ink.
            <li>You may bring your own calculator. If you plan on using your own calculator, be prepared to demonstrate that all memories are empty.
