Update: version 1.59 updated to emphasize SSN is no longer accepted--no FRN means no test.

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -32,7 +32,8 @@
            <li>Picture ID issued by a Government agency
            <li>FCC Registration Number (FRN). 
              <ul><li><i>If you are currently licensed</i> you will find your FRN on your license. 
-                 <li>If you do not have an FRN, you can obtain it at <a href="https://apps.fcc.gov/coresWeb/publicHome.do" target="_blank">https://apps.fcc.gov/coresWeb/publicHome.do</a>
+                 <li>If you do not have an FRN, you must obtain one at <a href="https://apps.fcc.gov/coresWeb/publicHome.do" target="_blank">https://apps.fcc.gov/coresWeb/publicHome.do</a>
+                 <li>If you do not have an FRN or are unable to obtain one, you will not be tested.
              </ul>
            <li>Pens/Pencils. We do ask you to fill your forms with blue or black ink.
            <li>You may bring your own calculator. If you plan on using your own calculator, be prepared to demonstrate that all memories are empty.
